--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://172.18.0.2:3306/pokedex
+    url: jdbc:mysql://localhost/pokedex
     username: root
     password: root
 
@@ -13,7 +13,7 @@ spring:
 
   data:
     mongodb:
-      host: 172.18.0.3
+      host: localhost
       port: 27017
       database: pokedex
 
